# discord-text-adventure-bot

./: CONTRIBUTING.md  README.md  TODO.md  UPDATES.md  bot.py  config.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cogs/: general.py  owner.py  template.py  textadv.py
database/: schema.sql
enemies/: zombie-1.json  zombie-2.json
exceptions/: __init__.py
helpers/: checks.py  data.py  db_manager.py
items/: mace.json  sword.json
rooms/: almice.json  geru-alley-1.json  geru-castle-open.json  geru-castle.json  geru-center.json  geru-downtown.json  geru-house-1.json  geru-house-2.json  geru-resdis.json  geru-store-1.json  geru-store-2.json  geru-store-3.json  geru.json  start.json  trials.json
rooms/arenas/castle/: zombie-2.json
rooms/arenas/city/: zombie-1.json
